[project]
name = "ukrane-war-drone-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "tujokuus",email = "tujokuus@student.jyu.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "duckdb (>=1.5.2,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]

[project.scripts]
pipeline = "src.pipeline:main"

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
